# StoreGenerator

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  LICENSE  README.md  The_Mirage_Emporium.html  app.py  auth_router.py  block_builder.py  debug_router.py  deploy.bat  deploy.sh  example_templates.py  index.html  load_from_json.py  morgors_meaty_inventory.py  morgors_meaty_marvels.py  new_template.html  process_html.py  process_text.py  pyproject.toml  requirements.txt  save-JSON-template.json  scripts.js  sd_generator.py  storeUI.css  storeUI.html  store_helper.py  store_operations.py  store_router.py  template.html  template.py  template_update.html  utilities.py
dependencies/: 5ePHBstyle.css  bundle.css  homebrewery-docker.txt  style.css
output/test/: format_test.html  html_template copy.html  html_template.html  morgorsMeatyMarvels.html
saved_data/Enchanted_Roots_Gear_Emporium/: Enchanted_Roots_Gear_Emporium.json
static/: 5ePHBstyle.css  bundle.css  enchantedRootsGearEmporium.json  storeUI.css  style.css  template_update.html
static/Enchanted_Roots_Gear_Emporium/: Enchanted_Roots_Gear_Emporium.json
static/css/: 5ePHBstyle.css  all.css  bundle.css  homebrewery -cssPaths  storeUI.css  style.css
static/html_files/: Enchanted-Roots-Gear-Emporium.html
static/json/: EnchantedRootsGearEmporium.json  enchantedRootsGearEmporium.json
static/scripts/: JSONHandler.js  blockBuilder.js  blockHandler.js  config.js  domInit.js  dragDropHandler.js  eventHandlers.js  handleTextareas.js  imageHandler.js  jsonToBlocks.js  (+9 more)
templates/: proxy.html  storeUI.html
