[tool.poetry]
name = "storegenerator"
version = "0.2.0"
description = "An app that takes in a users description of a store a store in the style of a published DnD supplemental"
authors = ["Alan Meigs <alan.meigs@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.4"
itsdangerous = "^2.2.0"
python-dotenv = "^1.0.1"
uvicorn = "^0.32.0"
httpx = "^0.27.2"
jinja2 = "^3.1.4"
python-multipart = "^0.0.17"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
